--- a/app/globals.css
+++ b/app/globals.css
@@ -4,58 +4,48 @@
 
 @layer base {
   :root {
-    --background: 116 57% 100%;
-    --foreground: 116 57% 3%;
-    --muted: 116 6% 91%;
-    --muted-foreground: 116 15% 35%;
-    --popover: 116 57% 100%;
-    --popover-foreground: 116 57% 3%;
-    --card: 116 57% 100%;
-    --card-foreground: 116 57% 3%;
-    --border: 116 4% 91%;
-    --input: 116 4% 91%;
-    --primary: 116 99% 61%;
-    --primary-foreground: 116 99% 1%;
-    --secondary: 116 12% 82%;
-    --secondary-foreground: 116 12% 22%;
-    --accent: 116 12% 82%;
-    --accent-foreground: 116 12% 22%;
-    --destructive: 17 97% 28%;
-    --destructive-foreground: 17 97% 88%;
-    --ring: 116 99% 61%;
-    --chart-1: 116 99% 61%;
-    --chart-2: 116 12% 82%;
-    --chart-3: 116 12% 82%;
-    --chart-4: 116 12% 85%;
-    --chart-5: 116 102% 61%;
+    --background: 120 100% 95%;
+    --foreground: 120 5% 0%;
+    --card: 120 50% 90%;
+    --card-foreground: 120 5% 10%;
+    --popover: 120 100% 95%;
+    --popover-foreground: 120 100% 0%;
+    --primary: 120 73% 57%;
+    --primary-foreground: 0 0% 100%;
+    --secondary: 120 30% 70%;
+    --secondary-foreground: 0 0% 0%;
+    --muted: 82 30% 85%;
+    --muted-foreground: 120 5% 35%;
+    --accent: 82 30% 80%;
+    --accent-foreground: 120 5% 10%;
+    --destructive: 0 100% 30%;
+    --destructive-foreground: 120 5% 90%;
+    --border: 120 30% 50%;
+    --input: 120 30% 18%;
+    --ring: 120 73% 57%;
     --radius: 0.5rem;
   }
-
   .dark {
-    --background: 116 45% 0%;
-    --foreground: 116 23% 97%;
-    --muted: 116 6% 9%;
-    --muted-foreground: 116 15% 65%;
-    --popover: 116 45% 0%;
-    --popover-foreground: 116 23% 97%;
-    --card: 116 45% 0%;
-    --card-foreground: 116 23% 97%;
-    --border: 116 4% 14%;
-    --input: 116 4% 14%;
-    --primary: 116 99% 61%;
-    --primary-foreground: 116 99% 1%;
-    --secondary: 116 18% 11%;
-    --secondary-foreground: 116 18% 71%;
-    --accent: 116 18% 11%;
-    --accent-foreground: 116 18% 71%;
-    --destructive: 17 97% 50%;
-    --destructive-foreground: 0 0% 100%;
-    --ring: 116 99% 61%;
-    --chart-1: 116 99% 61%;
-    --chart-2: 116 18% 11%;
-    --chart-3: 116 18% 11%;
-    --chart-4: 116 18% 14%;
-    --chart-5: 116 102% 61%;
+    --background: 120 50% 5%;
+    --foreground: 120 5% 90%;
+    --card: 120 50% 0%;
+    --card-foreground: 120 5% 90%;
+    --popover: 120 50% 5%;
+    --popover-foreground: 120 5% 90%;
+    --primary: 120 73% 57%;
+    --primary-foreground: 0 0% 100%;
+    --secondary: 120 30% 10%;
+    --secondary-foreground: 0 0% 100%;
+    --muted: 82 30% 15%;
+    --muted-foreground: 120 5% 60%;
+    --accent: 82 30% 15%;
+    --accent-foreground: 120 5% 90%;
+    --destructive: 0 100% 30%;
+    --destructive-foreground: 120 5% 90%;
+    --border: 120 30% 18%;
+    --input: 120 30% 18%;
+    --ring: 120 73% 57%;
+    --radius: 0.5rem;
   }
 }
 
